--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 
 <body>
-
+    <h1>PUTA MADRE</h1>
+    <H2>JKDSNFASDJKNF</H2>
+    <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A, odio.</P>
 </body>
 
 </html>
